[package]
name = "natural_sort"
version = "0.0.1"
authors = ["Ulysse Carion <ulysse@ulysse.io>"]
description = "A library for natural sorting (aka human sorting)"
homepage = "https://github.com/ucarion/natural-sort-rs"
keywords = ["natural", "human", "sort"]
license = "MIT"

[dependencies]
regex = "*"
regex_macros = "*"
